[package]
name = "lambda_rust_test"
version = "0.1.0"
authors = ["Kris <krzysztof.grobelak@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "^0.1"
log = "^0.4"
simple_logger = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
reqwest = { version = "0.9.9", default-features = false }
base64="0.10.0"
image = { version = "0.20.0", default-features = false }
imageproc="0.17"
rusttype = "0.7.3"
tempdir = "0.3.7"
rand = "0.6.4"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
